--- a/15213187968464.html
+++ b/15213187968464.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>由零建立Vue.js WebApp及專案結構解釋</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/3/18</span>
+          <span class="date">2018/03/18</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -246,7 +246,7 @@ $ npm run dev
 
 <p>執行一次<code>npm run build</code>後，可以看看<code>dist/index.html</code>：</p>
 
-<pre><code>&lt;div id=app&gt;&lt;/div&gt;
+<pre><code class="language-text">&lt;div id=app&gt;&lt;/div&gt;
 &lt;script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js&gt;&lt;/script&gt;
 &lt;script type=text/javascript src=/static/js/vendor.5973cf24864eecc78c48.js&gt;&lt;/script&gt;
 &lt;script type=text/javascript src=/static/js/app.cda9eea43bd2acedfa05.js&gt;
