--- a/15213187968804.html
+++ b/15213187968804.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>Git的常用指令和工作流程</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/3/18</span>
+          <span class="date">2018/03/18</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -188,7 +188,7 @@ $ git push --set-upstream origin some-branch
 
 <h3 id="toc_5">加入<code>.gitignore</code></h3>
 
-<pre><code>vim .gitignore
+<pre><code class="language-text">vim .gitignore
 git add .gitignore
 git commit -m &quot;Add .gitignore&quot;
 </code></pre>
