--- a/15213187969258.html
+++ b/15213187969258.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>Swift和Objective-C的前世今生</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/3/18</span>
+          <span class="date">2018/03/18</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -170,14 +170,12 @@
 <li><p>話說在1985年，Apple創辦人Steve Jobs權力被架空，憤而辭職，然後帶了幾個以前的同事在外成立了新科技公司<a href="https://en.wikipedia.org/wiki/NeXT">NeXT</a>。</p></li>
 <li><p>NeXT打算開發<a href="https://en.wikipedia.org/wiki/NeXTSTEP">NeXTSTEP</a>，一個Unix-like的作業系統。</p></li>
 <li><p><a href="https://en.wikipedia.org/wiki/Objective-C#History">Objective-C</a>誕生於1986年，NeXT在1988年購買了版權，用來開發了AppKit和Foundation Kit，和基於它們的Interface Builder(IB)，成為NeXTSTEP軟件的主要開發工具。</p>
-
 <ul>
 <li>（Foundation Kit有點似層相識吧）</li>
 <li>（順帶一提，第一版的C++出現在1985年，前身名為&quot;C with Classes&quot;，和Objective-C一樣旨在加入Object-oriented的功能到C裡面。）</li>
 </ul></li>
 <li><p>Apple在1996年尾又收購了NeXT，並讓Steve Jobs回到Apple重新執掌CEO一職。</p></li>
 <li><p>Apple在接收NeXT的技術和人才後，決定推出Macintosh系統的第十個Major version，並命名為OS X，第一個推出的消費者版本就是2001年的OS X 10.0。</p>
-
 <ul>
 <li>（所以為甚麼macOS或OS X的版本號全都是10.x，例如High Sierra就是10.13）</li>
 </ul></li>
