--- a/15221461803635.html
+++ b/15221461803635.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>React Native教學 Part 1 - 詳盡新手入門</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/3/28</span>
+          <span class="date">2018/03/28</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -178,13 +178,11 @@
 
 <ul>
 <li><strong>真正Native</strong>：React Native的所有基礎Components都分別是原生iOS和Android的，提供與Native apps接近的體驗
-
 <ul>
 <li>不同於Ionic等以HTML render的frameworks</li>
 </ul></li>
 <li>以JS控制App logics</li>
 <li>Data-driven：來自React的feature
-
 <ul>
 <li>一般基於Swift和Java的Native apps都是imperative地設置例如一個按鈕的properties</li>
 <li>而React component則是以passing <code>props</code>的方法，只要props有變，component就會自動適應而作出改變</li>
