--- a/2018-03-18-react-native-handling-permissions.html
+++ b/2018-03-18-react-native-handling-permissions.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>React Native - 處理User Permission</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/3/18</span>
+          <span class="date">2018/03/18</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -231,7 +231,6 @@
 <li>Permission is granted along with installation (<a href="https://stackoverflow.com/questions/37294076/push-notifications-gcm-permission-at-runtime">stackoverflow</a>)</li>
 <li>No dialog will be shown</li>
 <li>Notification format can be customized
-
 <ul>
 <li>Expo: 可以在<code>app.json</code> <a href="https://docs.expo.io/versions/latest/guides/configuration.html#notification">customize notification的樣式</a></li>
 </ul></li>
