--- a/2018-03-28-react-native-part3-component.html
+++ b/2018-03-28-react-native-part3-component.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>React Native教學 Part 3 - Component</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/4/30</span>
+          <span class="date">2018/04/30</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -212,7 +212,6 @@ class WhyReactNativeIsSoGreat extends Component {
 <ul>
 <li>每個Component都<strong>必須</strong>override <code>render()</code> method</li>
 <li><code>render()</code>裡面<strong>必須</strong>return一個Component
-
 <ul>
 <li>Component多數以<strong>JSX</strong> declare</li>
 <li><em><code>render()</code>只能return一個Component，如果要多於一個，需要用一個<code>&lt;View&gt;</code>來打包</em></li>
@@ -285,7 +284,6 @@ export default class CustomButton extends Component {
 
 <ul>
 <li><code>style={}</code>是JSX寫法，<code>{}</code>裡面容許任何valid JS code
-
 <ul>
 <li>有時只是string的話可以省略，例如：<code>title=&#39;hello&#39;</code></li>
 </ul></li>
