--- a/android-list-recycler-view.html
+++ b/android-list-recycler-view.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>如何使用Android RecyclerView建立一個List列表</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/8/8</span>
+          <span class="date">2018/08/08</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -203,17 +203,13 @@
 
 <ul>
 <li>Fragment
-
 <ul>
 <li>layout xml</li>
 <li>RecyclerView
-
 <ul>
 <li>Adapter
-
 <ul>
 <li>ViewHolder
-
 <ul>
 <li>layout xml</li>
 <li>TextView, etc</li>
@@ -253,7 +249,6 @@
 <ol>
 <li>Adapter製作<strong>少量</strong>所需的ViewHolder，它們只有相關的View，<strong>裡面沒有任何data</strong></li>
 <li>Adapter根據需要（如頁面滾動）自動bind和unbind這些ViewHolder
-
 <ul>
 <li>bind的時候一般以<code>position</code>來找data，然後用來設置ViewHolder裡的各個View應該顯示甚麼</li>
 </ul></li>
