--- a/design-pattern.html
+++ b/design-pattern.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -161,7 +161,7 @@
                 <div class="read-more clearfix">
                   <div class="more-left left">
                    <a href="delegation-pattern.html">Read more</a>&nbsp;&nbsp; 
-                    <span class="date">2018/5/15</span>
+                    <span class="date">2018/05/15</span>
                     <span>posted in&nbsp;</span> 
           				  
           					    <span class="posted-in"><a href='design-pattern.html'>Design Pattern</a></span>
@@ -197,7 +197,7 @@
                 <div class="read-more clearfix">
                   <div class="more-left left">
                    <a href="factory-design-pattern.html">Read more</a>&nbsp;&nbsp; 
-                    <span class="date">2018/5/15</span>
+                    <span class="date">2018/05/15</span>
                     <span>posted in&nbsp;</span> 
           				  
           					    <span class="posted-in"><a href='design-pattern.html'>Design Pattern</a></span>
