--- a/django-logging.html
+++ b/django-logging.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>在Django使用Logging製作紀錄檔</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/6/8</span>
+          <span class="date">2018/06/08</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -173,7 +173,6 @@
 <ul>
 <li>Custom log format</li>
 <li>不同程度的logging + custom handler
-
 <ul>
 <li>例如把<code>debug</code>和<code>error</code> message log到不同的file</li>
 <li>用email匯報某個module的<code>error</code></li>
@@ -253,7 +252,6 @@ __main__
 <ul>
 <li>Entry point的<code>__name__</code>是<code>__main__</code></li>
 <li>所有被entry point &quot;import&quot;的module都會一層一層地命名下去
-
 <ul>
 <li>例如django中的<code>models.py</code>，<code>__name__</code>就是<code>some_app.models</code></li>
 </ul></li>
