--- a/ios.html
+++ b/ios.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -161,7 +161,7 @@
                 <div class="read-more clearfix">
                   <div class="more-left left">
                    <a href="application-loader-authenticating-with-the-iTunes-store-solution.html">Read more</a>&nbsp;&nbsp; 
-                    <span class="date">2018/5/2</span>
+                    <span class="date">2018/05/02</span>
                     <span>posted in&nbsp;</span> 
           				  
           					    <span class="posted-in"><a href='ios.html'>iOS</a></span>
@@ -198,7 +198,7 @@
                 <div class="read-more clearfix">
                   <div class="more-left left">
                    <a href="15213187968335.html">Read more</a>&nbsp;&nbsp; 
-                    <span class="date">2018/3/18</span>
+                    <span class="date">2018/03/18</span>
                     <span>posted in&nbsp;</span> 
           				  
           					    <span class="posted-in"><a href='ios.html'>iOS</a></span>
