--- a/proxy-vpn-shadowsocks-concept.html
+++ b/proxy-vpn-shadowsocks-concept.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>翻牆專題：Proxy、VPN、Shadowsocks概念解釋</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/7/25</span>
+          <span class="date">2018/07/25</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -211,7 +211,6 @@
 <ul>
 <li>一般用於代理Browser request</li>
 <li>理解http packet中的內容
-
 <ul>
 <li>可以替換http header內容</li>
 <li>可以把重複的request結果cache起</li>
@@ -285,13 +284,11 @@
 
 <ul>
 <li><p>自由戰士奮鬥史：<a href="https://blog.yandere.moe/moe/gfw-vs-proxy/97.html">墙与梯的较量——那些年我们一起用过的翻墙手段</a></p>
-
 <ul>
 <li>以前出現過的翻牆工具和各種手法，真的是道高一尺，魔高一丈。</li>
 </ul></li>
 <li><p>防火長城技術：<a href="https://zh.wikipedia.org/wiki/%E9%98%B2%E7%81%AB%E9%95%BF%E5%9F%8E">防火長城Wiki</a></p></li>
 <li><p>Shadowsocks技術：</p>
-
 <ul>
 <li><a href="http://vc2tea.com/whats-shadowsocks/">写给非专业人士看的 Shadowsocks 简介</a></li>
 <li><a href="https://segmentfault.com/a/1190000011862912">你也能写个 Shadowsocks</a></li>
@@ -299,14 +296,12 @@
 <li><a href="https://en.wikipedia.org/wiki/Shadowsocks">Shadowsocks Wiki</a></li>
 </ul></li>
 <li><p>SS和SSR的歷史：</p>
-
 <ul>
 <li><a href="https://ssr.plus/271.html">科普：SSR和SS的区别</a></li>
 <li><a href="https://deeponion.org/community/threads/vpnss-ssr.901/">Vpn与ss/ssr的区别</a></li>
 </ul></li>
 <li><p><a href="https://github.com/shadowsocks/shadowsocks/issues/988">ss已经被特征识别了，请大家跑路</a></p></li>
 <li><p>Firefly Proxy</p>
-
 <ul>
 <li><a href="https://pao-pao.net/article/309">原理</a></li>
 </ul></li>
