--- a/react-native-part3.5-declarative.html
+++ b/react-native-part3.5-declarative.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>React Native教學 Part 3.5 - 概念分析：Declarative Programming</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/5/28</span>
+          <span class="date">2018/05/28</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -223,7 +223,7 @@ end
 
 <h4 id="toc_9">Declarative</h4>
 
-<pre><code class="language-SQL">SELECT Name, City FROM Customers;
+<pre><code class="language-sql">SELECT Name, City FROM Customers;
 </code></pre>
 
 <h3 id="toc_10">jQuery vs React</h3>
@@ -240,7 +240,7 @@ end
 
 <h4 id="toc_12">Declarative</h4>
 
-<pre><code class="language-html">&lt;Btn
+<pre><code class="language-markup">&lt;Btn
   onToggleHighlight={this.handleToggleHighlight}
   highlight={this.state.highlight}&gt;
     {this.state.buttonText}
