--- a/react-native-shadow.html
+++ b/react-native-shadow.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>在React Native處理Shadow</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/4/25</span>
+          <span class="date">2018/04/25</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -170,7 +170,7 @@
 
 <p>直接在任何View的<code>style</code>加入shadow。</p>
 
-<pre><code>// Android
+<pre><code class="language-text">// Android
 elevation: 2,
 
 // iOS
@@ -193,7 +193,6 @@ shadowOffset: {
 
 <ul>
 <li><code>elevation</code>用在<code>TouchableOpacity</code>裡的<code>View</code>沒有效果
-
 <ul>
 <li>要轉用<code>TouchableWithoutFeedback</code></li>
 </ul></li>
