--- a/software-engineering.html
+++ b/software-engineering.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -154,7 +154,6 @@
 <li>Digest: <a href="https://tools.ietf.org/html/rfc2069">RFC 2069</a> (1997) -&gt; <a href="https://tools.ietf.org/html/rfc2617">RFC 2617</a> (1999) -&gt; <a href="https://tools.ietf.org/html/rfc7617">RFC 7617</a> (2015)</li>
 <li>OAuth 1.0 (Twitter, 2007)</li>
 <li>OAuth 2.0 (2012)
-
 <ul>
 <li>Bearer (OAuth 2.0): <a href="https://tools.ietf.org/html/rfc6750">RFC 6750</a> (2012)</li>
 </ul></li>
@@ -211,7 +210,7 @@
                 <div class="read-more clearfix">
                   <div class="more-left left">
                    <a href="delegation-pattern.html">Read more</a>&nbsp;&nbsp; 
-                    <span class="date">2018/5/15</span>
+                    <span class="date">2018/05/15</span>
                     <span>posted in&nbsp;</span> 
           				  
           					    <span class="posted-in"><a href='design-pattern.html'>Design Pattern</a></span>
@@ -247,7 +246,7 @@
                 <div class="read-more clearfix">
                   <div class="more-left left">
                    <a href="factory-design-pattern.html">Read more</a>&nbsp;&nbsp; 
-                    <span class="date">2018/5/15</span>
+                    <span class="date">2018/05/15</span>
                     <span>posted in&nbsp;</span> 
           				  
           					    <span class="posted-in"><a href='design-pattern.html'>Design Pattern</a></span>
