--- a/15213187969431.html
+++ b/15213187969431.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>在Jupyter同時使用Python2 + Python3</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/3/18</span>
+          <span class="date">2018/03/18</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -255,12 +255,10 @@ optional arguments:
 <ol>
 <li>先安裝<code>python3</code>，例如<code>brew install python3</code>。</li>
 <li>安裝ipykernel到pip3
-
 <ul>
 <li><code>python3 -m pip install ipykernel</code></li>
 </ul></li>
 <li>使用pip3安裝python3到jupyter
-
 <ul>
 <li><code>python3 -m ipykernel install --user</code></li>
 </ul></li>
