--- a/2018-04-30-react-native-part2.5-choosing-navigation.html
+++ b/2018-04-30-react-native-part2.5-choosing-navigation.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>React Native教學 Part 2.5 - 選擇Navigation Library</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/4/30</span>
+          <span class="date">2018/04/30</span>
 
           <span>posted in&nbsp;</span> 
           
