--- a/Ruby on Rails.html
+++ b/Ruby on Rails.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -157,7 +157,7 @@
                 <div class="read-more clearfix">
                   <div class="more-left left">
                    <a href="rails-part1-hello-world-project.html">Read more</a>&nbsp;&nbsp; 
-                    <span class="date">2018/5/22</span>
+                    <span class="date">2018/05/22</span>
                     <span>posted in&nbsp;</span> 
           				  
           					    <span class="posted-in"><a href='Ruby%20on%20Rails.html'>Ruby on Rails</a></span>
