--- a/application-loader-authenticating-with-the-iTunes-store-solution.html
+++ b/application-loader-authenticating-with-the-iTunes-store-solution.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>XCode / Application Loader上傳套件卡關研究</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/5/2</span>
+          <span class="date">2018/05/02</span>
 
           <span>posted in&nbsp;</span> 
           
