--- a/babel-preprocess-this-arrow-function.html
+++ b/babel-preprocess-this-arrow-function.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>使用Babel處理ES6的 this 和 Arrow Function（箭頭函式）</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/9/5</span>
+          <span class="date">2018/09/05</span>
 
           <span>posted in&nbsp;</span> 
           
