--- a/django-unit-testing-part2-mocking.html
+++ b/django-unit-testing-part2-mocking.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>Django Unit Testing - Part 2 Mocking</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/6/4</span>
+          <span class="date">2018/06/04</span>
 
           <span>posted in&nbsp;</span> 
           
