--- a/laravel-part1-basics.html
+++ b/laravel-part1-basics.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>Laravel教學 Part 1 - 新手入門</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/5/30</span>
+          <span class="date">2018/05/30</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -171,7 +171,6 @@
 <ul>
 <li>Web Views: <code>routes/web.php</code></li>
 <li>API: <code>routes/api.php</code>
-
 <ul>
 <li>預設的<code>RouteServiceProvider</code>會把這裡所有routes都自動prefix了<code>api/</code></li>
 </ul></li>
