--- a/laravel.html
+++ b/laravel.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -155,7 +155,7 @@
                 <div class="read-more clearfix">
                   <div class="more-left left">
                    <a href="laravel-part1-basics.html">Read more</a>&nbsp;&nbsp; 
-                    <span class="date">2018/5/30</span>
+                    <span class="date">2018/05/30</span>
                     <span>posted in&nbsp;</span> 
           				  
           					    <span class="posted-in"><a href='laravel.html'>Laravel</a></span>
