--- a/shadowsocks-setup-tutorial.html
+++ b/shadowsocks-setup-tutorial.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -141,7 +141,7 @@
           <h1>翻牆必備：Shadowsocks建置教學</h1>
      
         <div class="read-more clearfix">
-          <span class="date">2018/7/26</span>
+          <span class="date">2018/07/26</span>
 
           <span>posted in&nbsp;</span> 
           
@@ -208,7 +208,7 @@ sudo apt install python3-pip
 
 <p>建立設定：</p>
 
-<pre><code class="language-json">{
+<pre><code class="language-javascript">{
    &quot;server&quot;:&quot;0.0.0.0&quot;,
    &quot;server_port&quot;:8088,
    &quot;local_port&quot;:0,
