--- a/翻牆.html
+++ b/翻牆.html
@@ -72,7 +72,7 @@
 
         <ul class="right" id="search-wrap">
           <li>
-<form target="_blank" onsubmit="return before_search();" action="http://google.com/search" method="get">
+<form target="_blank" onsubmit="return before_search();" action="https://google.com/search" method="get">
     <input type="hidden" id="search_q" name="q" value="" />
     <input tabindex="1" type="search" id="search_input"  placeholder="Search"/>
 </form>
@@ -167,7 +167,7 @@
                 <div class="read-more clearfix">
                   <div class="more-left left">
                    <a href="shadowsocks-setup-tutorial.html">Read more</a>&nbsp;&nbsp; 
-                    <span class="date">2018/7/26</span>
+                    <span class="date">2018/07/26</span>
                     <span>posted in&nbsp;</span> 
           				  
           					    <span class="posted-in"><a href='%E7%BF%BB%E7%89%86.html'>翻牆</a></span>
@@ -207,7 +207,7 @@
                 <div class="read-more clearfix">
                   <div class="more-left left">
                    <a href="proxy-vpn-shadowsocks-concept.html">Read more</a>&nbsp;&nbsp; 
-                    <span class="date">2018/7/25</span>
+                    <span class="date">2018/07/25</span>
                     <span>posted in&nbsp;</span> 
           				  
           					    <span class="posted-in"><a href='%E7%BF%BB%E7%89%86.html'>翻牆</a></span>
